[metadata]
name = pyrty
description = Add a short description here!
author = t-silvers
author_email = tsilvers@stanford.edu
license = MIT
license_files = LICENSE.txt
long_description = file: README.rst
long_description_content_type = text/x-rst; charset=UTF-8
url = https://github.com/pyscaffold/pyscaffold/
project_urls =
    Source = https://github.com/pyscaffold/pyscaffold/
platforms = any
classifiers =
    Development Status :: 4 - Beta
    Programming Language :: Python


[options]
zip_safe = False
packages = find_namespace:
include_package_data = True
package_dir =
    =src
python_requires = >=3.8
install_requires =
    importlib-metadata


[options.packages.find]
where = src
exclude =
    tests


[options.extras_require]
testing =
    setuptools
    pytest
    pytest-cov


[tool:pytest]
addopts =
    --cov pyrty --cov-report term-missing
    --verbose
norecursedirs =
    dist
    build
    .tox
testpaths = tests


[devpi:upload]
no_vcs = 1
formats = bdist_wheel


[flake8]
max_line_length = 88
extend_ignore = E203, W503
exclude =
    .tox
    build
    dist
    .eggs
    docs/conf.py


[pyscaffold]
version = 4.3.1
package = pyrty
